tests/NormalTests/paczka2/big_fuzzy/28655300.err
Error in line 6: IbKLLRx4p S544 48,3
Error in line 11: S163 S163 30,2
Error in line 17: Y8SeAVR0E S152 43,0
Error in line 26: Y8SeAVR0E S163 39,0
Error in line 36: Y8SeAVR0E S521 34,0
Error in line 39: IbKLLRx4p S163 71,9
Error in line 46: IbKLLRx4p S521 3,4
Error in line 49: XbGk S163 17,4
Error in line 47: cZ0tJ S152 66,0
Error in line 71: cszhS S163 68,2
Error in line 70: 9sEK4R40HV S152 1,4
Error in line 80: 9sEK4R40HV S152 64,3
Error in line 82: 9sEK4R40HV S544 54,1
Error in line 96: IbKLLRx4p S544 41,5
Error in line 123: XbGk S521 65,4
Error in line 128: XbGk S544 71,9
Error in line 135: XbGk S521 53,4
Error in line 143: IbKLLRx4p S152 98,7
Error in line 142: Y8SeAVR0E S544 66,7
Error in line 139: cZ0tJ S152 92,0
Error in line 156: S163 S152 28,6
Error in line 161: S163 S163 97,28
Error in line 157: cszhS S152 99,8
Error in line 145: Y8SeAVR0E S163 54,8
Error in line 166: S163 S163 489,0
Error in line 169: S163 S521 67,6
Error in line 171: 9sEK4R40HV S544 96,1
Error in line 170: XbGk S544 45,5
Error in line 178: S163 S163 -1,1
Error in line 174: cZ0tJ S163 37,5
Error in line 177: XbGk S152 76,5
Error in line 173: 9sEK4R40HV S521 61,9
Error in line 183: 9sEK4R40HV S152 15,4
Error in line 192: cszhS S152 84,3
Error in line 205: IbKLLRx4p S152 10,8
Error in line 203: cszhS S544 78,8
Error in line 204: cZ0tJ S152 43,6
Error in line 215: cZ0tJ S544 3,6
Error in line 230: cZ0tJ S521 96,6
Error in line 236: Y8SeAVR0E S163 8,3
Error in line 243: IbKLLRx4p S544 98,%
Error in line 216: S163 S163 16,6
Error in line 245: S163 S521 84,1
